# vbgw_v2

./: .dockerignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  test_runner.sh
docs/: api_spec.md  developer_customization_ko.md  slo_runbook.md  testing.md
history/: development_history.md
legacy/: .clang-format  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  fix_comments.py  test.sh
legacy/.github/workflows/: ci.yml  e2e-outbound-null-audio.yml
legacy/docs/: architecture.md  code_review_report.md  freeswitch_component_guide.md  freeswitch_docker_compose.md  freeswitch_migration_proposal.md  freeswitch_migration_v2.md  freeswitch_test_plan.md  optimization_roadmap.md  production_developer_manual_ko.md  production_operator_manual_ko.md  production_user_manual_ko.md  test_cases.md  troubleshooting.md  user_manual_ko.md
legacy/protos/: voicebot.proto
legacy/scripts/: soak_outbound_api.sh
legacy/src/: main.cpp
legacy/src/ai/: SileroVad.cpp  SileroVad.h  SpeexDsp.cpp
legacy/src/emulator/: mock_server.py  pyproject.toml  voicebot_pb2.py  voicebot_pb2.pyi  voicebot_pb2_grpc.py
legacy/src/engine/: SessionManager.h  VoicebotAccount.cpp  VoicebotAccount.h  VoicebotEndpoint.cpp  VoicebotMediaPort.h
legacy/src/ivr/: IvrManager.h
legacy/src/utils/: RingBuffer.h  RuntimeMetrics.h
legacy/tests/: test_ringbuffer.cpp  test_runtime_metrics.cpp  test_validate_prod_env.sh
scripts/: e2e_outbound_null_audio.sh  validate_prod_env.sh
src/: main.cpp
src/ai/: SileroVad.cpp  SpeexDsp.h  VoicebotAiClient.cpp  VoicebotAiClient.h
src/api/: HttpServer.cpp  HttpServer.h
src/emulator/: emulator.py
src/engine/: SessionManager.h  VoicebotAccount.cpp  VoicebotAccount.h  VoicebotCall.cpp  VoicebotCall.h  VoicebotEndpoint.cpp  VoicebotEndpoint.h  VoicebotMediaPort.cpp  VoicebotMediaPort.h
src/ivr/: IvrManager.cpp
src/utils/: AppConfig.h
vbgw-freeswitch/: README.md  docker-compose.prod.yml  docker-compose.yml
vbgw-freeswitch/bridge/cmd/: main.go
vbgw-freeswitch/bridge/internal/barge/: controller_test.go
vbgw-freeswitch/bridge/internal/config/: config.go
vbgw-freeswitch/bridge/internal/grpc/: client.go  retry.go  retry_test.go
vbgw-freeswitch/bridge/internal/vad/: silero.go  silero_stub.go
vbgw-freeswitch/bridge/internal/ws/: server.go  session.go
vbgw-freeswitch/config/freeswitch/: vars.xml
vbgw-freeswitch/config/freeswitch/dialplan/: default.xml
vbgw-freeswitch/config/freeswitch/sip_profiles/: internal.xml
vbgw-freeswitch/docs/: local_testing_guide.md
vbgw-freeswitch/orchestrator/cmd/: main.go
vbgw-freeswitch/orchestrator/internal/api/: control.go  health.go  health_test.go  middleware.go  server.go
vbgw-freeswitch/orchestrator/internal/esl/: client.go  commands_test.go
vbgw-freeswitch/orchestrator/internal/ivr/: machine.go
vbgw-freeswitch/scripts/: cutover.sh  slo_monitor.sh  validate_prod.sh
